날씨 컴포넌트 수정 및 뉴스 컨테이너 이름 변경 - 오늘의 날씨 색상 변경 - 날짜 형식을 Date 객체에서 문자열로 변경 - 날씨 조건을 'sun'에서 'rain'으로 수정 - 오늘의 날씨 제목 형식 변경 - 날씨 카드 클릭 핸들러 추가 - 뉴스 탭 컴포넌트 이름을 NewsContainer로 변경

--- a/src/Forcast.css
+++ b/src/Forcast.css
@@ -16,7 +16,7 @@
 }
 
 .today-weather h3 {
-  color: #d2f8a6;
+  color: #d81858;
   margin-bottom: 10px;
   font-family: "Montserrat", sans-serif;
 }
