Update dependencies and enhance UI components
- Added `chart.js` and `react-chartjs-2` for charting capabilities.
- Modified `Analysis` component to include a chart.
- Updated `App` component to improve layout and styling.
- Refactored CSS for navigation and forecast components.
- Enhanced `Forecast` component with a countdown feature and improved article display in `NewsContainer`.
- Added modal functionality for displaying full article content.

These changes improve the overall functionality and user experience of the application.

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,8 @@
-.mint-nav {
+.nav {
   display: flex;
-  background-color: rgb(100, 184, 184);
-  color: white;
+  background-color: rgb(228, 236, 236);
   padding: 20px;
-  text-align: left;
-  font-size: 30px;
   font-style: italic;
-}
-
-.nav-left {
-  display: flex;
   align-items: center;
-  gap: 100px;
-}
-
-.search-input {
-  margin-left: auto;
-}
-
-.tab {
-  width: 100%;
-  margin-left: 10px;
+  justify-content: space-between;
 }
